<resources>
    <string name="app_name">Tire Joist</string>
    <string name="action_settings">Settings</string>
    <string name="original_tire_size_title">Original Tire</string>
    <string name="new_tire_size_title">New Tire</string>
    <string name="tire_diameter_hint">Diameter</string>
    <string name="use_metric_menu_item">Metric Units</string>
    <string name="dark_theme_menu_item">Dark Theme</string>
    <string name="use_imperial_menu_item">Standard Units</string>
    <string name="light_theme_menu_item">Light Theme</string>
    <string name="correction_factor_prefix">Speedometer / Odometer Correction Factor:</string>
    <string name="revolutions_per_mile_suffix"> rev/mile</string>
    <string name="revolutions_per_kilometer_suffix"> rev/km</string>
    <string name="nominal_width">Width</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="rim_size_r">Rim</string>
    <string name="nominal_width_hint">nominal width</string>
    <string name="rim_diameter_hint">diameter</string>
    <string name="aspect_ratio_hint">sidewall</string>
    <string name="correction_factor_tool_tip">Multiply your indicated speed or mileage by correction factor to determine real value.</string>
    <string name="aspect_ratio_tool_tip">Indicates the sidewall dimension as percentage of tire width. Typical values are between 10 and 90.</string>
    <string name="computed_size_tool_tip">Measured tire dimensions may differ from calculated.</string>
    <string name="about">About</string>
    <string name="app_developer_name_version">Tire Joist</string>
    <string name="source_code_location">Source code can be found</string>
    <string name="contact_me">For requests, complaints, thoughts, or just odd ideas, feel free to contact me</string>
    <string name="here_text">here</string>
    <string name="send_email_intent_chooser_title">Compose Email</string>
    <string name="choose_browser_intent_title">Choose Browser</string>
    <string name="tire_size_utility_title">Size</string>
    <string name="tire_correction_utility_title">Correction</string>
    <string name="radius_delta_A">Radius \u0394 A:</string>
    <string name="half_width_delta_B">Half-Width \u0394 B:</string>
    <string name="new_title">New</string>
    <string name="original_title">Original</string>
    <string name="original_ring_and_pinion_ratio"><![CDATA[R&P]]></string>
    <string name="r_and_p_ratio_hint">Ratio</string>
    <string name="ideal_ratio_tool_tip_text">The ideal ratio is will produce the same final drive ratio as the original tire size and ratio.</string>

</resources>
