<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0sp"
                android:layout_height="50sp"
                android:text="@string/original_tire_size_title"
                android:layout_weight="1"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0sp"
                android:layout_height="50sp"
                android:text="@string/new_tire_size_title"
                android:layout_weight="1.5"
                android:tooltipText="@string/aspect_ratio_tool_tip"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0sp"
                android:layout_height="50sp"
                android:text="@string/original_ring_and_pinion_ratio"
                android:layout_weight="1"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="5sp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ideal_ratio_original_tire_diameter"
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_marginTop="5sp"
                android:hint="@string/tire_diameter_hint"
                android:maxLength="8"
                android:textAlignment="center"
                android:ellipsize="start"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/ideal_ratio_new_tire_diameter_edit_text"
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_marginTop="5sp"
                android:hint="@string/tire_diameter_hint"
                android:maxLength="8"
                android:textAlignment="center"
                android:ellipsize="start"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/ideal_ratio_original_ring_and_pinion_ratio"
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_marginLeft="2sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="5sp"
                android:hint="@string/r_and_p_ratio_hint"
                android:layout_weight="1"
                android:ellipsize="start"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:singleLine="true"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ideal_ratio_text_view"
                android:layout_width="0sp"
                android:textSize="30sp"
                android:layout_height="70sp"
                android:layout_weight="1"
                android:text="Ideal Ratio:"
                android:ellipsize="marquee"
                android:tooltipText="@string/ideal_ratio_tool_tip_text"
                android:layout_margin="5sp"
                android:singleLine="true"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>

</LinearLayout>
