<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tire_fitment_inputs_and_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:text="@string/nominal_width"
                android:layout_weight="1"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:text="@string/aspect_ratio"
                android:layout_weight="1.5"
                android:tooltipText="@string/aspect_ratio_tool_tip"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:text="@string/rim_size_r"
                android:layout_weight="1"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="5sp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/original_title"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"/>

            <EditText
                android:id="@+id/original_width_edit_text"
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_marginTop="5sp"
                android:hint="@string/nominal_width_hint"
                android:maxLength="8"
                android:textAlignment="center"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/original_aspect_ratio_edit_text"
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_marginTop="5sp"
                android:hint="@string/aspect_ratio_hint"
                android:maxLength="2"
                android:textAlignment="center"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/original_rim_diameter_edit_text"
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_marginLeft="2sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="5sp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:hint="@string/rim_diameter_hint"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:singleLine="true"
                android:textAlignment="center" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_weight="0.7"
                android:textAlignment="textEnd"
                android:text="@string/new_title"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"/>

            <EditText
                android:id="@+id/new_width_edit_text"
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_marginTop="5sp"
                android:hint="@string/nominal_width_hint"
                android:maxLength="8"
                android:textAlignment="center"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/new_aspect_ratio_edit_text"
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_marginTop="5sp"
                android:hint="@string/aspect_ratio_hint"
                android:maxLength="2"
                android:textAlignment="center"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/new_rim_diameter_edit_text"
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_marginLeft="2sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="5sp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:hint="@string/rim_diameter_hint"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:singleLine="true"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0sp"
                android:layout_height="50sp"
                android:text="@string/radius_delta_A"
                android:layout_weight="1"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"
                android:gravity="right"/>

            <TextView
                android:layout_width="0sp"
                android:layout_height="50sp"
                android:text="0.00"
                android:layout_weight="1"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="5sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/radius_delta_percentage"
                android:layout_width="0sp"
                android:layout_height="50sp"
                android:text="+0.0%"
                android:layout_weight="1"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="5sp"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0sp"
                android:layout_height="50sp"
                android:text="@string/half_width_delta_B"
                android:layout_weight="1"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"
                android:gravity="right"/>

            <TextView
                android:layout_width="0sp"
                android:layout_height="50sp"
                android:text="0.00"
                android:layout_weight="1"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="5sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/half_width_delta_percentage"
                android:layout_width="0sp"
                android:layout_height="50sp"
                android:text="+0.0%"
                android:layout_weight="1"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="5sp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/tire_fitment_v1"/>
    </LinearLayout>


</RelativeLayout>